#10 tanácsok gomb hozzáadása és átrendezés 2.0

--- a/BmiCalculator/BmiCalculator/BmiCalculator.csproj
+++ b/BmiCalculator/BmiCalculator/BmiCalculator.csproj
@@ -53,7 +53,9 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="IllustrationCell.cs" />
+    <Compile Include="Advice.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Measurement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
