--- a/BmiCalculator/BmiCalculator/BmiCalculator.csproj
+++ b/BmiCalculator/BmiCalculator/BmiCalculator.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Measurement.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reaction.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
